Implements fix to provide for a vertical scroll bar on display list item descriptions when the description text is too long to fit in the space available.

--- a/css/custom-widgets-shared-display-list-default.css
+++ b/css/custom-widgets-shared-display-list-default.css
@@ -72,6 +72,7 @@ a.widget_gmuj_widget_display_list_item:hover {
     transition-delay: 0s;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
+    overflow-y: auto;
 }
 
 /* Style display list item description for when the whole display list item is hovered-over */
